crates/parsing/tests/snapshots/grammar_tests__negative-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: -1
Start { kind: NegativeBinder }
  Token { kind: Minus }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
Finish

