crates/parsing/tests/snapshots/grammar_tests__number-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1.0
Start { kind: LiteralBinder }
  Token { kind: LiteralNumber }
Finish

