crates/parsing/tests/snapshots/grammar_tests__operator-chain-empty.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1
Start { kind: Sentinel }
Start { kind: Sentinel }
Start { kind: LiteralExpression }
  Token { kind: LiteralInteger }
Finish

