crates/parsing/tests/snapshots/grammar_tests__optional-qualified-prefix.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: a
Start { kind: VariableExpression }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Lower }
    Finish
  Finish
Finish

