crates/parsing/tests/snapshots/grammar_tests__parenthesized-application.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (1 2)
Start { kind: ParenthesizedExpression }
  Token { kind: LeftParenthesis }
  Start { kind: ApplicationExpression }
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish

