crates/parsing/tests/snapshots/grammar_tests__parenthesized-binder-negative.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (-1)
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: NegativeBinder }
    Token { kind: Minus }
    Start { kind: LiteralBinder }
      Token { kind: LiteralInteger }
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish

