crates/parsing/tests/snapshots/grammar_tests__parenthesized-binder-nested.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (((1.0)))
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: ParenthesizedBinder }
    Token { kind: LeftParenthesis }
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: LiteralBinder }
        Token { kind: LiteralNumber }
      Finish
      Token { kind: RightParenthesis }
    Finish
    Token { kind: RightParenthesis }
  Finish
  Token { kind: RightParenthesis }
Finish

