crates/parsing/tests/snapshots/grammar_tests__parenthesized-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (1)
Start { kind: ParenthesizedExpression }
  Token { kind: LeftParenthesis }
  Start { kind: LiteralExpression }
    Token { kind: LiteralInteger }
  Finish
  Token { kind: RightParenthesis }
Finish

